      Decider and not clearing it when the configure context is completed.
    - Add default paths for yacc tool on windows to include cygwin, mingw, and chocolatey
    - Fix issue #2799 - Fix mingw tool to respect SHCCCOMSTR, SHLINKCOMSTR and LDMODULECOMSTR
    - Fix Issue #3329 - Add support for MS SDK V10.0A (which is commonly installed with VS2017)

  From Daniel Moody:
    - Change the default for AppendENVPath to delete_existing=0, so path
      order will not be changed, unless explicitly set (Issue #3276)
    - Fixed bug which threw error when running SCons on windows system with no MSVC installed.
    - Update link tool to convert target to node before accessing node member
    - Update mingw tool to remove MSVC like nologo CCFLAG
    - Add default paths for lex tool on windows to include cygwin, mingw, and chocolatey
    - Add lex construction variable LEXUNISTD for turning off unix headers on windows
    - Update lex tool to use win_flex on windows if available

  From Mats Wichmann:
    - Quiet open file ResourceWarnings on Python >= 3.6 caused by
      not using a context manager around Popen.stdout
    - Add the textfile tool to the default tool list
    - Fix syntax on is/is not clauses: should not use with a literal
    - Properly retrieve exit code when catching SystemExit
    - scons-time now uses context managers around file opens
    - Fix regex patterns that were not specified as raw strings

  From Bernhard M. Wiedemann:
    - Do not store build host+user name if reproducible builds are wanted
    
  From Maciej Kumorek:
    - Update the MSVC tool to include the nologo flag by default in RCFLAGS

RELEASE 3.0.4 - Mon, 20 Jan 2019 22:49:27 +0000

  From Mats Wichmann:
    - Improve finding of Microsoft compiler: add a 'products' wildcard
      in case 2017 Build Tools only is installed as it is considered a separate
      product from the default Visual Studio
    - Add TEMPFILESUFFIX to allow a customizable filename extension, as